--- a/web/internet/index.html
+++ b/web/internet/index.html
@@ -157,7 +157,8 @@
                     <div class="col-lg-9">
                         <h1>Ενημερωθείτε πρώτη για όλες τις νέες προσφορές.</h1>
                         <p>Ενημερωθείτε για τις προσφορές και την κοινωνική δράση της εταιρίας 
-                            <br> και συμβάλετε μαζί μας στο κοινωφελές έργο.</p>
+                            <br> και συμβάλετε μαζί μας στο κοινωφελές έργο.
+                        </p>
                     </div>
                     <div class="col-lg-3 jumbotron">
                         <form onsubmit="onSignupNewsletter();return false;">
@@ -193,6 +194,9 @@
 
                         <p> Ή με ηλεκτρονικό μήνυμα στην διεύθυνση: <a href="mailto:contact@kagemco.gr">contact@kagemco.gr</p>
                     </div>
+                </div>
+                <div class="row">
+                    <a class="col-lg-offset-10" href="stores.html"> Καταστήματα </a>
                 </div>
             </div>
         </section>
